@@ -1,6 +1,11 @@
 2007-01-16  Sascha L. Teichmann <sascha.teichmann@intevation.de>
 
 	* src/de/intevation/printlayout/LayoutFrame.java:
+		scale map proportional.
+
+2007-01-16  Sascha L. Teichmann <sascha.teichmann@intevation.de>
+
+	* src/de/intevation/printlayout/LayoutFrame.java:
 		using menus instead of buttons. make LayoutFrame a JFrame
 
 	* src/de/intevation/printlayout/PrintLayoutPlugin.java:
